# serializer version: 1
# name: test_sql_fixture_compiles_to_snapshot[SELECT COUNT(*) FROM orders]
  'SELECT COUNT(*) AS count FROM prod.orders AS o WHERE o.deleted_at IS NULL'
# ---
# name: test_sql_fixture_compiles_to_snapshot[SELECT region, COUNT(*) AS n FROM orders GROUP BY region ORDER BY n DESC]
  'SELECT o.region AS region, COUNT(*) AS n FROM prod.orders AS o WHERE o.deleted_at IS NULL GROUP BY region ORDER BY n DESC NULLS LAST'
# ---
# name: test_sql_fixture_compiles_to_snapshot[SELECT region, SUM(revenue) AS rev FROM orders GROUP BY region HAVING SUM(revenue) > 1000]
  'SELECT o.region AS region, SUM(o.amount) AS rev FROM prod.orders AS o WHERE o.deleted_at IS NULL GROUP BY region HAVING SUM(o.amount) > %(p0)s'
# ---
# name: test_sql_fixture_compiles_to_snapshot[SELECT region, SUM(revenue) AS rev FROM orders GROUP BY region ORDER BY rev DESC]
  'SELECT o.region AS region, SUM(o.amount) AS rev FROM prod.orders AS o WHERE o.deleted_at IS NULL GROUP BY region ORDER BY rev DESC NULLS LAST'
# ---
# name: test_sql_fixture_compiles_to_snapshot[SELECT region, SUM(revenue) AS rev FROM orders GROUP BY region]
  'SELECT o.region AS region, SUM(o.amount) AS rev FROM prod.orders AS o WHERE o.deleted_at IS NULL GROUP BY region'
# ---
# name: test_sql_fixture_compiles_to_snapshot[SELECT region, SUM(revenue) FROM orders GROUP BY region LIMIT 10 OFFSET 20]
  'SELECT o.region AS region, SUM(o.amount) AS revenue FROM prod.orders AS o WHERE o.deleted_at IS NULL GROUP BY region LIMIT 10 OFFSET 20'
# ---
# name: test_sql_fixture_compiles_to_snapshot[SELECT region, SUM(revenue) FROM orders GROUP BY region LIMIT 10]
  'SELECT o.region AS region, SUM(o.amount) AS revenue FROM prod.orders AS o WHERE o.deleted_at IS NULL GROUP BY region LIMIT 10'
# ---
# name: test_sql_fixture_compiles_to_snapshot[SELECT region, SUM(revenue) FROM orders GROUP BY region ORDER BY orders.revenue DESC]
  'SELECT o.region AS region, SUM(o.amount) AS revenue FROM prod.orders AS o WHERE o.deleted_at IS NULL GROUP BY region ORDER BY revenue DESC NULLS LAST'
# ---
# name: test_sql_fixture_compiles_to_snapshot[SELECT region, SUM(revenue) FROM orders GROUP BY region ORDER BY region ASC]
  'SELECT o.region AS region, SUM(o.amount) AS revenue FROM prod.orders AS o WHERE o.deleted_at IS NULL GROUP BY region ORDER BY region ASC'
# ---
# name: test_sql_fixture_compiles_to_snapshot[SELECT region, SUM(revenue) FROM orders GROUP BY region]
  'SELECT o.region AS region, SUM(o.amount) AS revenue FROM prod.orders AS o WHERE o.deleted_at IS NULL GROUP BY region'
# ---
# name: test_sql_fixture_compiles_to_snapshot[SELECT region, SUM(revenue) FROM orders WHERE region IN ('EMEA', 'APAC') GROUP BY region]
  'SELECT o.region AS region, SUM(o.amount) AS revenue FROM prod.orders AS o WHERE o.deleted_at IS NULL AND o.region IN (%(p0)s, %(p1)s) GROUP BY region'
# ---
# name: test_sql_fixture_compiles_to_snapshot[SELECT region, SUM(revenue) FROM orders WHERE status = 'paid' GROUP BY region]
  'SELECT o.region AS region, SUM(o.amount) AS revenue FROM prod.orders AS o WHERE o.deleted_at IS NULL AND o.status = %(p0)s GROUP BY region'
# ---
# name: test_sql_fixture_compiles_to_snapshot[SELECT region, SUM(revenue) FROM orders WHERE status = 'paid' OR region = 'EMEA' GROUP BY region]
  'SELECT o.region AS region, SUM(o.amount) AS revenue FROM prod.orders AS o WHERE o.deleted_at IS NULL AND (o.status = %(p0)s OR o.region = %(p1)s) GROUP BY region'
# ---
# name: test_sql_fixture_compiles_to_snapshot[SELECT region, status, SUM(revenue) FROM orders GROUP BY region, status]
  'SELECT o.region AS region, o.status AS status, SUM(o.amount) AS revenue FROM prod.orders AS o WHERE o.deleted_at IS NULL GROUP BY region, status'
# ---
